--- a/.github/workflows/generateRSS.yml
+++ b/.github/workflows/generateRSS.yml
@@ -2,32 +2,36 @@ name: Generate OpenMensa RSS feeds
 
 on:
   schedule:
-    - cron: "5 4 * * 1-5"
+    - cron: "30 1 * * 1-5"
   workflow_dispatch:
 
 permissions:
   contents: write
 
 jobs:
-  generateRSS:
+  generate-rss:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-      with:
-        ref: main
+      - uses: actions/checkout@v4
+        with:
+          ref: main
 
-    - uses: actions/setup-go@v5
+      - uses: actions/setup-go@v5
 
-    - name: Generate RSS xml files
-      run: |
-        go run cmd/generaterss/main.go
-  
-    - name: Commit and push to the repository
-      run: |
-        git config --global user.name github-actions
-        git config --global user.email github-actions[bot]@users.noreply.github.com
-        git add .
-        # Force the build to succeed, even if no files were changed
-        git commit -m 'Update RSS feeds' || true
-        git push
+      - name: Generate RSS xml files
+        run: |
+          go run cmd/generaterss/main.go
+
+      - name: Commit and push to the repository
+        run: |
+          git config --global user.name github-actions
+          git config --global user.email github-actions[bot]@users.noreply.github.com
+          git add .
+          # Force the build to succeed, even if no files were changed
+          git commit -m 'Update RSS feeds' || true
+          git push
+
+  deploy:
+    needs: generate-rss
+    uses: ./.github/workflows/static.yml
