--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,12 +31,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: main
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './rss'
+          path: "./rss"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
