--- a/.github/workflows/generateRSS.yml
+++ b/.github/workflows/generateRSS.yml
@@ -2,7 +2,7 @@ name: Generate OpenMensa RSS feeds
 
 on:
   schedule:
-    - cron: "30 1 * * 1-5"
+    - cron: "30 0 * * *"
   workflow_dispatch:
 
 permissions:
