run script a second time in the morning of Mondays

--- a/.github/workflows/generateRSS.yml
+++ b/.github/workflows/generateRSS.yml
@@ -3,6 +3,7 @@ name: Generate OpenMensa RSS feeds
 on:
   schedule:
     - cron: "30 0 * * *"
+    - cron: "30 9 * * 1"
   workflow_dispatch:
 
 permissions:
